# CirrusSync

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  nginx.conf  package.json  vite.config.ts
src/: App.tsx  TitleBar.tsx  global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_transfer.rs  lib.rs  main.rs  recovery_key.rs  system_identity.rs
src/components/: CustomCheckBox.tsx  DashboardLayout.tsx  EmptyState.tsx  FolderTree.tsx  FolderTreePanel.tsx  LoadingIndicator.tsx  Modal.tsx  PlanModal.tsx  ProtectedRoute.tsx  RecoveryPhraseModel.tsx  Switch.tsx  ThemeToggle.tsx  Toast.tsx  UserMenuModal.tsx  VerifyEmailModal.tsx
src/components/Home/: ActionToolTip.tsx  DialogModal.tsx  FileContent.tsx  FolderBrowserModal.tsx  ItemIntegrityStatus.tsx  Preview.tsx  TransferHandler.tsx
src/components/Trash/: ActionDialog.tsx
src/context/: AppTitleContext.tsx  AuthContext.tsx  DriveManager.tsx  KeyManager.ts  SessionListener.tsx  ThemeContext.tsx  bip39_words.ts  cryptoWorker.js
src/hooks/: useSecurityEvents.ts  useServerChallenge.ts  useSessions.ts  useTauriEventListeners.ts  useUserUpdate.ts
src/pages/: DrivePage.tsx  EmailVerificationPage.tsx  ForgotPassword.tsx  LoginPage.tsx  Onboarding.tsx  SettingsPage.tsx  ShareWithMe.tsx  SharedFilesPage.tsx  SignupPage.tsx  TrashPage.tsx
src/services/: ApiService.ts  SecureStorageService.ts  ServerChallengeHandler.ts  SrpService.ts
src/types/: types.d.ts
src/utils/: utils.tsx
(+20 files in other folders)
